tests/src/frontend/typechecking/invalid/type_alias_generic_3.sk
class Bar<T>{}

type Foo<T> = Bar<X>; /* Unbound name: X */
